--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,13 @@ language: node_js
 node_js:
   - "4"
   - "6"
+
+cache:
+  directories:
+    - node_modules
+
+script: "npm run-script test-cov"
+
+after_script:
+  - "npm install coveralls"
+  - "cat ./coverage/lcov.info | coveralls"
